--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: src/gate
+      - run: pwd
+      - run: cd /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}/src/gate
       - run: go get -v -t -d ./...
       - run: go test -v ./...
