--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,16 @@ jobs:
     #### expecting it in the form of
     ####   /go/src/github.com/circleci/go-tool
     ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    working_directory: /go/src/github.com/cc4i/go-bumblebee
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
       - run: pwd
-      - run: cd /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}/src/gate
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: which go
+      - run: echo $PATH
+      - run: cd /go/src/github.com/cc4i/go-bumblebee/src/gate
+      - run: ls -F
+      - run: go get -v -d
+      - run: go test -v -cover ./...
+
