--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,18 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: pwd
-      - run: which go
-      - run: echo $PATH
-      - run: cd /go/src/github.com/cc4i/go-bumblebee/src/gate
-      - run: ls -F
-      - run: go get -v -d
-      - run: go test -v -cover ./...
+      - run: 
+          name: building & test
+          command: |
+            which go
+            echo $PATH
+            cd /go/src/github.com/cc4i/go-bumblebee/src/gate
+            ls -F
+            go get -v -d
+            go test -v -cover ./...
+workflows:
+  version: 2
+  build-workflow:
+    jobs:
+      - build
 
