--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,11 @@
 # Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
-  build:
+  build-gate:
     docker:
       # specify the version
       - image: circleci/golang:1.14.1
 
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/cc4i/go-bumblebee
     steps:
       - checkout
@@ -26,9 +22,29 @@ jobs:
             ls -F
             go get -v -d
             go test -v -cover ./...
+  build-air:
+    docker:
+      # specify the version
+      - image: circleci/golang:1.14.1
+
+    working_directory: /go/src/github.com/cc4i/go-bumblebee
+    steps:
+      - checkout
+
+      # specify any bash command here prefixed with `run: `
+      - run: 
+          name: building & test
+          command: |
+            which go
+            echo $PATH
+            cd /go/src/github.com/cc4i/go-bumblebee/src/air
+            ls -F
+            go get -v -d
+            go test -v -cover ./...
 workflows:
   version: 2
   build-workflow:
     jobs:
-      - build
+      - build-gate
+      - build-air
 
