--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,13 @@ jobs:
             ls -F
             go get -v -d
             go test -v -cover ./...
+      - run: 
+          name: building image & push
+          command: |
+            cd /go/src/github.com/cc4i/go-bumblebee/src/gate
+            echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
+            docker build -t go-bumblebee/gate:$CIRCLE_BRANCH .
+            docker push go-bumblebee/gate:$CIRCLE_BRANCH .
   build-air:
     docker:
       # specify the version
@@ -41,6 +48,7 @@ jobs:
             ls -F
             go get -v -d
             go test -v -cover ./...
+      
 workflows:
   version: 2
   build-workflow:
