.circleci/config.yml - docker build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - checkout
 
+      - setup_remote_docker:
+          docker_layer_caching: true
+          
       # specify any bash command here prefixed with `run: `
       - run: 
           name: building & test
