.circleci/config.yml - docker build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             cd /home/circleci/project/src/gate
             echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
             docker build -t go-bumblebee/gate:$CIRCLE_BRANCH .
-            docker push go-bumblebee/gate:$CIRCLE_BRANCH .
+            docker push go-bumblebee/gate:$CIRCLE_BRANCH
 
   build-air:
     docker:
