--- a/manifests/kubernetes/air-all.yaml
+++ b/manifests/kubernetes/air-all.yaml
@@ -14,7 +14,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: gate-go-bumblebee
-        image:  go-bumblebee/air
+        image:  herochinese/go-bumblebee-air:master
         ports:
           - name: http
             containerPort: 9011
