--- a/manifests/kubernetes/gate-all.yaml
+++ b/manifests/kubernetes/gate-all.yaml
@@ -14,7 +14,10 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: gate-go-bumblebee
-        image:  go-bumblebee/gate
+        image:  herochinese/go-bumblebee-gate:master
+        env:
+          - name: AIR_SERVICE_ENDPOINT
+            value: airservice:9011
         ports:
           - name: http
             containerPort: 9010
