--- a/manifests/kubernetes/gate-all.yaml
+++ b/manifests/kubernetes/gate-all.yaml
@@ -18,6 +18,8 @@ spec:
         env:
           - name: AIR_SERVICE_ENDPOINT
             value: airservice:9011
+          - name: SPY_SERVICE_ENDPOINT
+            value: spyservice:9041
         ports:
           - name: http
             containerPort: 9010
