init k8s while using.

--- a/manifests/kubernetes/spy-all.yaml
+++ b/manifests/kubernetes/spy-all.yaml
@@ -16,6 +16,9 @@ spec:
       containers:
       - name: gate-go-bumblebee
         image:  herochinese/go-bumblebee-spy:master
+        env:
+          - name: IN_CLUSTER_CONFIG
+            value: true
         ports:
           - name: http
             containerPort: 9041
