--- a/manifests/kubernetes/air-all.yaml
+++ b/manifests/kubernetes/air-all.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       terminationGracePeriodSeconds: 5
       containers:
-      - name: gate-go-bumblebee
+      - name: air-go-bumblebee
         image:  herochinese/go-bumblebee-air:master
         ports:
           - name: http
