--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,37 @@ jobs:
             echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
             docker build -t $DOCKER_USER/go-bumblebee-spy:$CIRCLE_BRANCH .
             docker push $DOCKER_USER/go-bumblebee-spy:$CIRCLE_BRANCH
+  build-bee:
+    docker:
+      # specify the version
+      - image: circleci/node:13.12-browsers
+
+    working_directory: /go/src/github.com/cc4i/go-bumblebee
+    steps:
+      - checkout
+
+      # specify any bash command here prefixed with `run: `
+      - run: 
+          name: building & test
+          command: |
+            cd /go/src/github.com/cc4i/go-bumblebee/src/bee
+            npm install 
+            npm install -g @angular/cli@9.1.1
+            ng test --watch=false
+
+  build-bee-image:
+    machine: true
+    steps:
+      - checkout
+
+      # specify any bash command here prefixed with `run: `
+      - run: 
+          name: building image & push
+          command: |
+            cd /home/circleci/project/src/bee
+            echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
+            docker build -t $DOCKER_USER/go-bumblebee-bee:$CIRCLE_BRANCH .
+            docker push $DOCKER_USER/go-bumblebee-bee:$CIRCLE_BRANCH
 
 workflows:
   version: 2
@@ -123,3 +154,7 @@ workflows:
           requires:
             - build-spy
 
+      - build-bee
+      - build-bee-image:
+          requires:
+            - build-bee
