--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
       # specify the version
       - image: circleci/node:13.12-browsers
 
-    working_directory: /go/src/github.com/cc4i/go-bumblebee
+    working_directory: ~/go-bumblebee
     steps:
       - checkout
 
@@ -116,7 +116,7 @@ jobs:
       - run: 
           name: building & test
           command: |
-            cd /go/src/github.com/cc4i/go-bumblebee/src/bee
+            cd ~/go-bumblebee/src/bee
             npm install 
             npm install -g @angular/cli@9.1.1
             ng test --watch=false
