--- a/src/gql/gqlgen.yml
+++ b/src/gql/gqlgen.yml
@@ -1,6 +1,6 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
-  - graph/*.graphqls
+  - graph/*.graphql
 
 # Where should the generated server code go?
 exec:
@@ -35,7 +35,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "gate/graphqlsvr/graph/model"
+  - "gql/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
