circleci failed to build angular project.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,7 @@ jobs:
             cd ~/go-bumblebee/src/bee
             npm install 
             npm install @angular/cli@9.1.1
+            npm run ngcc
             export PATH=~/go-bumblebee/src/bee/node_modules/@angular/cli/bin:$PATH
             ng test --watch=false
 
