--- a/src/bee/package.json
+++ b/src/bee/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "ngcc": "ngcc --properties es2015 browser module main --async false"
   },
   "private": true,
   "dependencies": {
@@ -45,9 +46,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
-  },
-  
-  "postinstall": "ngcc --properties es2015 browser module main --async false"
+  }
   
 
 }
