added manifests for argocd

--- a/manifests/argocd-kustomize/kustomization.yaml
+++ b/manifests/argocd-kustomize/kustomization.yaml
@@ -3,10 +3,9 @@
 #kind: Kustomization
 
 # namespace to deploy all resources to
-namespace: go-bumblebee
+# namespace: go-bumblebee
 
 resources:
-- ns.yaml
 - gate
 - air
 - spy
