--- a/manifests/argocd-kustomize/kustomization.yaml
+++ b/manifests/argocd-kustomize/kustomization.yaml
@@ -1,6 +1,6 @@
 # kustomization.yaml
-#apiVersion: kustomize.config.k8s.io/v1beta1
-#kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 
 # namespace to deploy all resources to
 # namespace: go-bumblebee
