--- a/src/gql/Makefile
+++ b/src/gql/Makefile
@@ -1,6 +1,7 @@
 
 # Image URL to use all building/pushing
-IMG ?= gate:latest
+DOCKER_IMAGE ?= herochinese/gql-jazz-service
+DOCKER_TAG ?= $(shell git rev-parse --abbrev-ref HEAD)
 # Docker Hub username / password
 DOCKER_PASS =
 DOCKER_USER =
@@ -30,10 +31,12 @@ generate:
 
 # Build the docker image
 docker-build: test
-	docker build . -t ${IMG}
+	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG
+	docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest
 
 # Push the docker image
 docker-push:
-	echo $DOCKER_PASS | docker login --username $DOCKER_USER --password-stdin
-	docker push ${IMG}
+	echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
+	docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
+	docker push ${DOCKER_IMAGE}:latest
 
