--- a/src/Makefile
+++ b/src/Makefile
@@ -1,24 +1,21 @@
 
 
-all: gate-src air-src spy-src gql-src bee-src
+all: was-src air-src gql-src front-src
 
 
-gate-src:
-	echo "Testing gate ..."
-	@cd gate && make test
+was-src:
+	echo "Testing was ..."
+	@cd was && make test
 
 air-src:
 	echo "Testing air ..."
 	@cd air && make test
 
-spy-src:
-	echo "Testing spy ..."
-	@cd spy && make test
 
 gql-src:
 	echo "Testing gql ..."
 	@cd gql && make test
 
-bee-src:
-	echo "Testing bee ..."
-	@cd bee && ng test --watch=false
+front-src:
+	echo "Testing front ..."
+	@cd front && yarn test a --watchAll=false
