--- a/src/was/Makefile
+++ b/src/was/Makefile
@@ -1,6 +1,6 @@
 
 # Image URL to use all building/pushing
-DOCKER_IMAGE ?= herochinese/gql-jazz-service
+DOCKER_IMAGE ?= herochinese/was-jazz-service
 DOCKER_TAG ?= $(shell git rev-parse --abbrev-ref HEAD)
 # Docker Hub username / password
 DOCKER_PASS =
@@ -31,7 +31,7 @@ vet:
 
 # Build the docker image
 docker-build: test
-	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG
+	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG}
 	docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest
 
 # Push the docker image
