--- a/manifests/kustomize/redis/kustomization.yaml
+++ b/manifests/kustomize/redis/kustomization.yaml
@@ -5,9 +5,7 @@ kind: Kustomization
 
 # list of resource config to be applied
 resources:
-- air-secret.yaml
-- air-deployment.yaml
-- air-service.yaml
+- redis.yaml
 
 # # namespace to deploy all resources to
 # namespace: go-bumblebee
