--- a/src/locust/Makefile
+++ b/src/locust/Makefile
@@ -1,30 +1,11 @@
 
 # Image URL to use all building/pushing
-DOCKER_IMAGE ?= herochinese/go-bumblebee-was
+DOCKER_IMAGE ?= herochinese/go-bumblebee-locust
 DOCKER_TAG ?= $(shell git rev-parse --abbrev-ref HEAD)
 # Docker Hub username / password
 DOCKER_PASS =
 DOCKER_USER =
 
-all: manager
-
-test: fmt vet
-	go test ./... -v -cover
-
-# Build manager binary
-manager: fmt vet
-	go build -o gate main.go
-
-run: fmt vet
-	go run ./main.go
-
-# Run go fmt against code
-fmt:
-	go fmt ./...
-
-# Run go vet against code
-vet:
-	go vet ./...
 
 #generate:
 #	go run github.com/99designs/gqlgen generate ./...
@@ -35,6 +16,6 @@ docker-build: test
 
 # Push the docker image
 docker-push:
-	#echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
+	echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
 	docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
 
