--- a/manifests/kustomize/air/air-deployment.yaml
+++ b/manifests/kustomize/air/air-deployment.yaml
@@ -1,21 +1,44 @@
 apiVersion: apps/v1
 kind: Deployment 
 metadata:
-  name: airservice
+  name: air
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: airservice 
+      app: air 
   template:
     metadata:
       labels: 
-        app: airservice 
+        app: air 
     spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: air-go-bumblebee
-        image:  herochinese/go-bumblebee-air:master
+        image:  herochinese/go-bumblebee-air:new-combo-jazz
+        env:
+          - name: AQI_SERVER_URL
+            valueFrom: 
+              secretKeyRef:
+                name: airsecret
+                key: aqiUrl
+          - name: AQI_SERVER_TOKEN
+            valueFrom: 
+              secretKeyRef:
+                name: airsecret
+                key: aqiToken
+          - name: IP_STACK_SERVER_URL
+            valueFrom: 
+              secretKeyRef:
+                name: airsecret
+                key: ipstackUrl
+          - name: IP_STACK_SERVER_TOKEN
+            valueFrom: 
+              secretKeyRef:
+                name: airsecret
+                key: ipstackToken
+          - name: REDIS_SERVER_ADDRESS
+            value: redis-cart:6379
         ports:
           - name: http
             containerPort: 9011
