--- a/manifests/kustomize/gql/kustomization.yaml
+++ b/manifests/kustomize/gql/kustomization.yaml
@@ -5,9 +5,8 @@ kind: Kustomization
 
 # list of resource config to be applied
 resources:
-- gate-deployment.yaml
-- gate-service.yaml
-# - gate-service-external.yaml
+- gql-deployment.yaml
+- gql-service.yaml
 
 # # namespace to deploy all resources to
 # namespace: go-bumblebee
