--- a/manifests/kustomize/was/was-deployment.yaml
+++ b/manifests/kustomize/was/was-deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment 
 metadata:
-  name: gateservice
+  name: was
 spec:
   selector:
     matchLabels:
-      app: gateservice 
+      app: was 
   template:
     metadata:
       labels: 
-        app: gateservice 
+        app: was 
     spec:
       terminationGracePeriodSeconds: 5
       containers:
-      - name: gate-go-bumblebee
-        image:  herochinese/go-bumblebee-gate:master
+      - name: was-go-bumblebee
+        image:  herochinese/go-bumblebee-was:new-combo-jazz
         livenessProbe:
           failureThreshold: 5
           httpGet:
@@ -36,20 +36,12 @@ spec:
           timeoutSeconds: 1
         env:
           - name: AIR_SERVICE_ENDPOINT
-            value: airservice:9011
-          - name: SPY_SERVICE_ENDPOINT
-            value: spyservice:9041
+            value: air:9011
         ports:
           - name: http
             containerPort: 9010
-          - name: grpc
-            containerPort: 9020
-          - name: graphql
-            containerPort: 9030
           - name: websocket
             containerPort: 9040
-          - name: tcp
-            containerPort: 9050
         resources:
           requests: 
             cpu: 100m
