--- a/src/air/Makefile
+++ b/src/air/Makefile
@@ -1,6 +1,6 @@
 
 # Image URL to use all building/pushing
-DOCKER_IMAGE ?= herochinese/air-jazz-service
+DOCKER_IMAGE ?= herochinese/go-bumblebee-air
 DOCKER_TAG ?= $(shell git rev-parse --abbrev-ref HEAD)
 # Docker Hub username / password
 DOCKER_PASS =
@@ -35,11 +35,9 @@ vet:
 # Build the docker image
 docker-build: test
 	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG}
-	docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest
 
 # Push the docker image
 docker-push:
-	echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
+	#echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
 	docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
-	docker push ${DOCKER_IMAGE}:latest
 
