--- a/src/gql/Dockerfile
+++ b/src/gql/Dockerfile
@@ -14,12 +14,12 @@ WORKDIR $GOPATH/src/mypackage/myapp/
 RUN go get -d -v
 
 #build the binary
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /go/bin/was
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /go/bin/gql
 
 # STEP 2 build a small image
 # start from scratch
 FROM scratch
 
 # Copy our static executable
-COPY --from=builder /go/bin/was /go/bin/was
-CMD ["/go/bin/was"]
+COPY --from=builder /go/bin/gql /go/bin/gql
+CMD ["/go/bin/gql"]
