--- a/src/gql/Makefile
+++ b/src/gql/Makefile
@@ -1,6 +1,6 @@
 
 # Image URL to use all building/pushing
-DOCKER_IMAGE ?= herochinese/gql-jazz-service
+DOCKER_IMAGE ?= herochinese/go-bumblebee-gql
 DOCKER_TAG ?= $(shell git rev-parse --abbrev-ref HEAD)
 # Docker Hub username / password
 DOCKER_PASS =
@@ -31,12 +31,10 @@ generate:
 
 # Build the docker image
 docker-build: test
-	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG
-	docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest
+	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG}
 
 # Push the docker image
 docker-push:
-	echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
+	#echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
 	docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
-	docker push ${DOCKER_IMAGE}:latest
 
