--- a/src/gql/Makefile
+++ b/src/gql/Makefile
@@ -30,7 +30,7 @@ generate:
 	go run github.com/99designs/gqlgen generate ./...
 
 # Build the docker image
-docker-build: test
+docker-build:
 	docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG}
 
 # Push the docker image
