--- a/src/locust/Makefile
+++ b/src/locust/Makefile
@@ -16,6 +16,6 @@ docker-build:
 
 # Push the docker image
 docker-push:
-	echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
+	# echo ${DOCKER_PASS} | docker login --username ${DOCKER_USER} --password-stdin
 	docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
 
