--- a/manifests/kustomize/front/kustomization.yaml
+++ b/manifests/kustomize/front/kustomization.yaml
@@ -7,6 +7,8 @@ kind: Kustomization
 resources:
 - front-deployment.yaml
 - front-service.yaml
+- gateway.yaml
+- virtual-service.yaml
 
 # # namespace to deploy all resources to
 # namespace: go-bumblebee
