--- a/manifests/kustomize/was/was-http-service.yaml
+++ b/manifests/kustomize/was/was-http-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: air
+  name: was-http
 spec: 
   type: ClusterIP
   selector:
-    app: air
+    app: was
   ports:
   - name: http
-    port: 9011
-    targetPort: 9011
+    port: 9010
+    targetPort: 9010 
