--- a/manifests/kustomize/was/was-websocket-service.yaml
+++ b/manifests/kustomize/was/was-websocket-service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: was
+  name: was-websocket
 spec: 
   type: ClusterIP
   selector:
     app: was
   ports:
-  - name: http
-    port: 9010
-    targetPort: 9010
   - name: websocket
     port: 9040
     targetPort: 9040     
