--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -15,6 +15,8 @@ phases:
         commands:
           - echo Build started on `date`
           - echo Building the Docker image...
+          - echo $PWD
+          - cd src/air
           - make test
           - make docker-build
           - docker tag $DOCKER_IMAGE:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
