--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -9,7 +9,10 @@ phases:
           - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
           - ACCOUNT_ID=$(aws sts get-caller-identity|jq -r '.Account')
           - DOCKER_IMAGE=herochinese/go-bumblebee-air
-          - IMAGE_TAG=$(git rev-parse --abbrev-ref HEAD)
+          - git version
+          - git rev-parse --abbrev-ref HEAD
+          - git symbolic-ref --short HEAD
+          - IMAGE_TAG=$CODEBUILD_SOURCE_VERSION
           - REPOSITORY_URI=$ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$DOCKER_IMAGE  
           - |
             aws ecr create-repository \
