--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -24,7 +24,7 @@ phases:
           - cd src/air
           - make test
           - echo Building $DOCKER_IMAGE:$IMAGE_TAG...
-          - docker build . -t ${DOCKER_IMAGE}:${DOCKER_TAG}
+          - docker build . -t $DOCKER_IMAGE:$DOCKER_TAG
           - echo Tagging $REPOSITORY_URI:$IMAGE_TAG...
           - docker tag $DOCKER_IMAGE:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
     post_build:
