--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -1,5 +1,10 @@
 version: 0.2
 
+env:
+  secrets-manager:
+    ACCESS_TOKEN: github-bumblebee:accessToken
+    APP_CONF_REPO: github-bumblebee:appConfRepo
+
 phases:
     pre_build:
         commands:
@@ -11,6 +16,13 @@ phases:
           - DOCKER_IMAGE=herochinese/go-bumblebee-air
           - IMAGE_TAG=$CODEBUILD_SOURCE_VERSION
           - REPOSITORY_URI=$ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$DOCKER_IMAGE  
+          - |
+            export CODEBUILD_GIT_BRANCH="$(git symbolic-ref HEAD --short 2>/dev/null)"
+            if [ "$CODEBUILD_GIT_BRANCH" = "" ] ; then
+              CODEBUILD_GIT_BRANCH="$(git branch -a --contains HEAD | sed -n 2p | awk '{ printf $1 }')";
+              export CODEBUILD_GIT_BRANCH=${CODEBUILD_GIT_BRANCH#remotes/origin/};
+            fi
+            echo $CODEBUILD_GIT_BRANCH
           - |
             aws ecr create-repository \
               --repository-name $DOCKER_IMAGE \
@@ -32,3 +44,13 @@ phases:
           - echo Build completed on `date`
           - echo Pushing the Docker images...
           - docker push $REPOSITORY_URI:$IMAGE_TAG
+          - cd; mkdir workspace; cd workspace 
+          - git clone https://$ACCESS_TOKEN:x-oauth-basic@github.com/cc4i/$APP_CONF_REPO.git
+          - cd $APP_CONF_REPO
+          - cd kustomize/staging
+          - kuustomize edit set kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
+          - cd ../production
+          - kuustomize edit set kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
+          - git add -A
+          - git commit -m "update kustomization"
+          - git push
