--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -28,6 +28,10 @@ phases:
               --repository-name $DOCKER_IMAGE \
               --image-scanning-configuration scanOnPush=true \
               --region $AWS_DEFAULT_REGION || true
+          - |
+            curl -s "https://raw.githubusercontent.com/\
+              kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
+          - export PATH=$PWD:$PATH
           - kustomize version
     build:
         commands:
