--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -2,6 +2,7 @@ version: 0.2
 
 env:
   secrets-manager:
+    GITHUB_USER: github-bumblebee:githubUser
     ACCESS_TOKEN: github-bumblebee:accessToken
     APP_CONF_REPO: github-bumblebee:appConfRepo
 
@@ -49,12 +50,12 @@ phases:
           - echo Pushing the Docker images...
           - docker push $REPOSITORY_URI:$IMAGE_TAG
           - cd; mkdir workspace; cd workspace 
-          - git clone https://$ACCESS_TOKEN:x-oauth-basic@github.com/cc4i/$APP_CONF_REPO.git
+          - git clone https://$ACCESS_TOKEN:x-oauth-basic@github.com/$GITHUB_USER/$APP_CONF_REPO.git
           - cd $APP_CONF_REPO
           - cd kustomize/staging
-          - kustomize edit set kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
+          - kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
           - cd ../production
-          - kustomize edit set kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
+          - kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
           - git add -A
           - git commit -m "update kustomization"
           - git push
