--- a/src/air/buildspec.yaml
+++ b/src/air/buildspec.yaml
@@ -1,6 +1,8 @@
 version: 0.2
 
 env:
+  variables:
+    APP_NAME: air
   secrets-manager:
     GITHUB_USER: github-bumblebee:githubUser
     ACCESS_TOKEN: github-bumblebee:accessToken
@@ -14,7 +16,7 @@ phases:
           - aws --version
           - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
           - ACCOUNT_ID=$(aws sts get-caller-identity|jq -r '.Account')
-          - DOCKER_IMAGE=herochinese/go-bumblebee-air
+          - DOCKER_IMAGE=herochinese/go-bumblebee-$APP_NAME
           - IMAGE_TAG=$CODEBUILD_SOURCE_VERSION
           - REPOSITORY_URI=$ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$DOCKER_IMAGE  
           - |
@@ -55,9 +57,9 @@ phases:
           - git config --global user.name "robot"
           - cd $APP_CONF_REPO
           - cd kustomize/staging
-          - kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
+          - kustomize edit set image herochinese/go-bumblebee-$APP_NAME=$REPOSITORY_URI:$IMAGE_TAG
           - cd ../production
-          - kustomize edit set image herochinese/go-bumblebee-was=$REPOSITORY_URI:$IMAGE_TAG
+          - kustomize edit set image herochinese/go-bumblebee-$APP_NAME=$REPOSITORY_URI:$IMAGE_TAG
           - git add -A
           - git commit -m "update kustomization"
           - git push
