--- a/src/was/buildspec.yaml
+++ b/src/was/buildspec.yaml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    APP_NAME: was
+    APP_NAME: "was"
   secrets-manager:
     GITHUB_USER: github-bumblebee:githubUser
     ACCESS_TOKEN: github-bumblebee:accessToken
