--- a/src/locust/buildspec.yaml
+++ b/src/locust/buildspec.yaml
@@ -40,8 +40,7 @@ phases:
           - echo Build started on `date`
           - echo Building the Docker image...
           - echo $PWD
-          - cd src/air
-          - make test
+          - cd src/locust
           - echo Building $DOCKER_IMAGE:$IMAGE_TAG...
           - docker build . -t $DOCKER_IMAGE:$IMAGE_TAG
           - echo Tagging $REPOSITORY_URI:$IMAGE_TAG...
