--- a/src/was/buildspec.yaml
+++ b/src/was/buildspec.yaml
@@ -40,7 +40,7 @@ phases:
           - echo Build started on `date`
           - echo Building the Docker image...
           - echo $PWD
-          - cd src/air
+          - cd src/$APP_NAME
           - make test
           - echo Building $DOCKER_IMAGE:$IMAGE_TAG...
           - docker build . -t $DOCKER_IMAGE:$IMAGE_TAG
