--- a/manifests/kustomize-linkerd/staging/air/kustomization.yaml
+++ b/manifests/kustomize-linkerd/staging/air/kustomization.yaml
@@ -13,8 +13,8 @@ resources:
 # all with following *kustomization*
 images:
 - name: herochinese/go-bumblebee-air
-  newName: __air_docker_image__
-  newTag: __air_image_tag__
+  newName: herochinese/go-bumblebee-air
+  newTag: new-combo-jazz
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
