--- a/manifests/kustomize/production/locust/kustomization.yaml
+++ b/manifests/kustomize/production/locust/kustomization.yaml
@@ -12,8 +12,8 @@ resources:
 # all with following *kustomization*
 images:
 - name: herochinese/go-bumblebee-locust
-  newName: __locust_docker_image__
-  newTag: __locust_image_tag__
+  newName: herochinese/go-bumblebee-locust
+  newTag: new-combo-jazz
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
