--- a/manifests/kustomize/staging/front/kustomization.yaml
+++ b/manifests/kustomize/staging/front/kustomization.yaml
@@ -12,8 +12,8 @@ resources:
 # all with following *kustomization*
 images:
 - name: herochinese/go-bumblebee-front
-  newName: __fromt_docker_image__
-  newTag: __front_image_tag__
+  newName: herochinese/go-bumblebee-front
+  newTag: new-combo-jazz
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
