--- a/manifests/kustomize/staging/gql/kustomization.yaml
+++ b/manifests/kustomize/staging/gql/kustomization.yaml
@@ -12,8 +12,8 @@ resources:
 # all with following *kustomization*
 images:
 - name: herochinese/go-bumblebee-gql
-  newName: __gql_docker_image__
-  newTag: __gql_image_tag__
+  newName: herochinese/go-bumblebee-gql
+  newTag: new-combo-jazz
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
