--- a/manifests/kustomize/staging/was/kustomization.yaml
+++ b/manifests/kustomize/staging/was/kustomization.yaml
@@ -12,8 +12,8 @@ resources:
 # all with following *kustomization*
 images:
 - name: herochinese/go-bumblebee-was
-  newName: __was_docker_image__
-  newTag: __was_image_tag__
+  newName: herochinese/go-bumblebee-was
+  newTag: new-combo-jazz
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
