enhance: add multiple version for api.

--- a/src/air/Makefile
+++ b/src/air/Makefile
@@ -14,6 +14,7 @@ test:	fmt	vet
 	AQI_SERVER_TOKEN="1234567890" \
 	IP_STACK_SERVER_URL="https://127.0.0.1" \
 	IP_STACK_SERVER_TOKEN="1234567890" \
+	AIR_VERSION="v1" \
 	go test ./... -v -cover
 
 
